--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+branches:
+  only:
+  - master
 sudo: required
 services: 
 - docker
@@ -13,7 +16,7 @@ alpine: &alpine
         - docker images
         - |
           for i in `docker images --format {{.Repository}}:{{.Tag}}`; do
-            if [[ $TRAVIS_EVENT_TYPE == "push" && $TRAVIS_BRANCH == "master" ]]; then 
+            if [[ $TRAVIS_EVENT_TYPE == "push" ]]; then 
               docker push $i;
             fi
           done
