--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,12 @@ branches:
 services: 
 - docker
 push: &push
+      before_install:
+        - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+        - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
+        - sudo apt-get update
+        - sudo apt-get -y -o Dpkg::Options::="--force-confnew" install docker-ce
+        - docker version
       after_success:
         - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
         - docker images
@@ -20,6 +26,7 @@ alpine: &alpine
       script:
         - docker-compose -f dist/alpine/docker-compose.yml build
         - docker rmi alpine:3.11
+        - docker system prune -f
       <<: *push
 debian: &debian
       stage: Build
@@ -28,6 +35,7 @@ debian: &debian
       script:
         - docker-compose -f dist/debian/docker-compose.yml build
         - docker rmi debian:9.12-slim
+        - docker system prune -f
       <<: *push
 jobs:
   include:
