--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,10 @@ alpine: &alpine
       language: shell
       script:
         - docker-compose -f $COMPOSE_FILE build
-        - IMAGE=$(docker-compose -f $COMPOSE_FILE images app | tail -1 | awk '{print $2}')
-        - TAG=$(docker-compose -f $COMPOSE_FILE images app | tail -1 | awk '{print $3}')
+        - docker-compose -f $COMPOSE_FILE images app
+        - export IMAGE=$(docker-compose -f $COMPOSE_FILE images app | tail -1 | awk '{print $2}')
+        - export TAG=$(docker-compose -f $COMPOSE_FILE images app | tail -1 | awk '{print $3}')
+        - echo "${IMAGE}"
         - docker tag ${IMAGE}:${TAG} ${IMAGE}:${TAG}-${TRAVIS_COMMIT:0:7}
         - docker rmi alpine:3.11
         - docker system prune -f
