--- a/.travis.yml
+++ b/.travis.yml
@@ -27,14 +27,11 @@ alpine: &alpine
       os: linux
       language: shell
       script:
-        - echo "${COMPOSE_FILE}"
         - docker-compose -f $COMPOSE_FILE build
-        - docker-compose -f $COMPOSE_FILE images
-        - export IMAGE=$(docker-compose -f $COMPOSE_FILE images app | tail -1 | awk '{print $2}')
-        - export TAG=$(docker-compose -f $COMPOSE_FILE images app | tail -1 | awk '{print $3}')
-        - echo "${IMAGE}"
+				- docker rmi alpine:3.11
+        - IMAGE=$(docker images | tail -1 | awk '{print $1}')
+        - TAG=$(docker images | tail -1 | awk '{print $2}')
         - docker tag ${IMAGE}:${TAG} ${IMAGE}:${TAG}-${TRAVIS_COMMIT:0:7}
-        - docker rmi alpine:3.11
         - docker system prune -f
       <<: *push
 debian: &debian
