--- a/config/.env
+++ b/config/.env
@@ -1,13 +1,18 @@
-CONDA_VERSION=4.8.2
-PY_VERSION=3.8
+# CONDA_VER=4.9.0
+# PY_VER=3.9
+# PY_LABEL=py38_
+# CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
+
+CONDA_VER=4.8.3
+PY_VER=3.8
 PY_LABEL=py38_
-CONDA_MD5=cbda751e713b5a95f187ae70b509403f
+CONDA_MD5=d63adf39f2c220950a063e0529d4ff74
 
-# CONDA_VERSION=4.8.2
-# PY_VERSION=3.7
+# CONDA_VER=4.8.3
+# PY_VER=3.7
 # PY_LABEL=py37_
-# CONDA_MD5=87e77f097f6ebb5127c77662dfc3165e
+# CONDA_MD5=751786b92c00b1aeae3f017b781018df
 
-# CONDA_VERSION=4.4.10
-# PY_VERSION=3.6
-# CONDA_MD5=bec6203dbb2f53011e974e9bf4d46e93
+# CONDA_VER=4.5.4
+# PY_VER=3.6
+# CONDA_MD5=a946ea1d0c4a642ddf0c3a26a18bb16d
