--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -64,7 +64,7 @@ jobs:
         with:
           name: ${{ format('{0}-py{1}-{2}', matrix.conda_ver, matrix.py_ver, matrix.distro) }}
           path: ${{ format('{0}-py{1}-{2}.tar.gz', matrix.conda_ver, matrix.py_ver, matrix.distro) }}
-          retention-days: 5
+          retention-days: 1
   test:
     needs: build
     runs-on: ubuntu-latest
@@ -109,7 +109,7 @@ jobs:
           docker load < "${CONDA_VER}-py${PY_VER}-${DISTRO}.tar.gz"
           REF=$(docker images --filter "reference=datajoint/*" --format "{{.Repository}}:{{.Tag}}")
           docker run --rm "$REF" sh -lc "conda -V" | grep "$CONDA_VER"
-          docker run --rm "$REF" sh -lc "python --version" | grep "3.7"
+          docker run --rm "$REF" sh -lc "python --version" | grep "$PY_VER"
           docker run --rm "$REF" sh -lc "cat /etc/issue" | grep -i "$DISTRO"
 
 
