--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -108,9 +108,11 @@ jobs:
         run: |
           docker load < "${CONDA_VER}-py${PY_VER}-${DISTRO}.tar.gz"
           REF=$(docker images --filter "reference=datajoint/*" --format "{{.Repository}}:{{.Tag}}")
-          docker run --rm "$REF" sh -lc "conda -V 2>&1" | grep "$CONDA_VER"
-          docker run --rm "$REF" sh -lc "python --version 2>&1" | grep "$PY_VER"
-          docker run --rm "$REF" sh -lc "cat /etc/issue 2>&1" | grep -i "$DISTRO"
+          SHELL_CMD=$(docker inspect "$REF" --format '{{join .Config.Cmd " "}})
+          echo "$SHELL_CMD"
+          docker run --rm "$REF" "$SHELL_CMD" -c "conda -V 2>&1" | grep "$CONDA_VER"
+          docker run --rm "$REF" "$SHELL_CMD" -c "python --version 2>&1" | grep "$PY_VER"
+          docker run --rm "$REF" "$SHELL_CMD" -c "cat /etc/issue 2>&1" | grep -i "$DISTRO"
 
 
   # deploy:
