Update latest tag.

--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -164,12 +164,7 @@ jobs:
           # docker push "${IMAGE}:{TAG}"
           docker tag "${IMAGE}:${TAG}" "${IMAGE}:${TAG}-${COMMIT_SHA:0:7}"
           # docker push "${IMAGE}:${TAG}-${COMMIT_SHA:0:7}"
-          if [ "$PY_VER" == "3.9" && "$DISTRO" == "debian" ];then
-            docker tag "${IMAGE}:${TAG}" "${IMAGE}:latest"
-            # docker push "${IMAGE}:latest"
-          else
-            echo "skipping 'latest' tag..."
-          fi
+          [ "$PY_VER" == "3.9" ] && [ "$DISTRO" == "debian" ] && docker tag "${IMAGE}:${TAG}" "${IMAGE}:latest" || echo "skipping 'latest' tag..."
           # [ "$PY_VER" == "3.9" && "$DISTRO" == "debian" ] && docker tag "${IMAGE}:${TAG}" "${IMAGE}:latest" && docker push "${IMAGE}:latest" || echo "skipping 'latest' tag..."
 
           docker images
